[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "square_database_helper"
version = "2.7.1"
description = "helper to access the database layer for my personal server."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_database_helper" }
keywords = ["database", "helper", "utilities"]
dependencies = [
    "pydantic>=2.9.2",
    "square_commons>=3.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
all = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.build-backend]
module-name = "square_database_helper"
module-root = ""
